data/derived/sp14/progs/unify/prog4027.ml.out
Characters 110-112:
  let c = s2.[i] in
          ^^
Error: This expression has type int but an expression was expected of type
         string
